# edgeALPR

./: .coverage  .dockerignore  .gitignore  ARCHITECTURE_AUDIT.md  DEPLOYMENT.md  Dockerfile.pi  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: access_control.db
data/logs/: video_access_events.jsonl
examples/: minimal_plate_detection.py  with_access_control.py  with_gpio_relay.py
models/license_recognizer/: lprnet.pth
notebooks/: 01_vehicle_identification_prototype.ipynb  02_plate_detection_model_finetuning.ipynb  03_plate_detection_prototype.ipynb  04_license_recognition_image_labelling.ipynb  05_license_recognition_model_prototype.ipynb  06_license_recognition_model_finetuning.ipynb  07_license_recognition_with_paddleocr.ipynb
scripts/: setup-pi.sh
src/actuator/: base_actuator.py  factory.py  gpio_relay_actuator.py  mock_actuator.py  safe_actuator.py  test_gpio_relay.py
src/configs/: settings.py  settings.yaml
src/db/: base_repository.py  bootstrap_db.py  repository.py
src/decision/: base_rules_engine.py  rules_engine.py  temporal_voter.py
src/health/: __init__.py  health_check.py  metrics.py
src/logging/: event_logger.py
src/pipeline/: run_image_pipeline.py  run_video_pipeline.py
src/utils/: filter_ocr_images.py  image_ops.py  logger.py  rearrange_data.py
src/vision/: base_detector.py  detector_factory.py  hailo_plate_detector.py  hailo_yolo_detector.py  image_ops.py  onnx_detector.py  plate_detector.py  plate_ocr.py  vehicle_detector.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_actuator.py  test_detector_backends.py  test_event_logger.py  test_health_metrics.py  test_repository.py  test_rules_engine.py
