[project]
name = "vision-based-access-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imutils>=0.5.4",
    "numpy>=2.4.4",
    "openai>=2.33.0",
    "opencv-python>=4.13.0.92",
    "paddleocr>=3.4.0",
    "paddlepaddle>=3.3.1",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.8.0",
    "sqlite-utils>=3.39",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "ultralytics>=8.4.35",
    "rapidfuzz>=3.12.0",
]
